# rates-provider

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  telegram-ui.instructions.md  users-service.instructions.md
requirements/: dev.txt  prod.txt
src/modules/: __init__.py
src/rates_provider/: __init__.py  __main__.py  config.py  main.py
src/rates_provider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/users_service/: __init__.py
tests/: test_add_exchange_rate.py  test_add_rate_dialog.py  test_exchange_rate.py  test_list_exchange_rates.py  test_main.py  test_memory_exchange_rate_repository.py  test_repository_factory.py  test_sqlite_exchange_rate_repository.py  test_telegram.py  test_telegram_scene_base.py
tests/architecture/: test_infrastructure_boundaries.py
tests/rates_provider/: test_add_exchange_rate.py  test_add_rate_dialog.py  test_compute_exchange_paths.py  test_delete_exchange_rate.py  test_delete_rate_confirm_scene.py  test_edit_rate_scene.py  test_exchange_paths_scene.py  test_list_exchange_rates.py  test_list_rates_scene.py  test_memory_exchange_rate_repository.py  test_repository_factory.py  test_selected_rate_scene.py  test_sqlite_exchange_rate_repository.py  test_telegram_scene_base.py  test_update_exchange_rate.py
tests/users_service/: test_ensure_user_middleware.py  test_memory_user_repository.py  test_resolve_or_create_telegram_user.py  (+1 more)
(+145 files in other folders)
